Deploying React Application to GitHub pages

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "money-now",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://henriquefadoni.github.io/money-now/",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
